--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,11 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+.toolbar > .link:hover {
+  background-color: black;
+  color: 'blue';
+  padding: 10px;
+}
